A few more small changes to the text and formtting

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -870,7 +870,8 @@ content.</p></td>
 <tbody>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">headline</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">A brief and snappy introduction to the content, designed to catch the reader&#8217;s attention</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">A brief and snappy introduction to the content, designed to catch the reader&#8217;s
+attention</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">string</p></td>
 </tr>
 <tr>
@@ -880,13 +881,17 @@ content.</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">body<em>_&lt;type&gt;</em></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">The textual content of the news object. (The string appended to body_ in the property name should reflect the format of the text)<br>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The textual content of the news object. The string appended to body_ in the
+property name should reflect the format of the text, for example <code>body_text</code> or
+<code>body_html</code>.<br>
 Multiple body_* properties are allowed.</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">string</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">description<em>_&lt;type&gt;</em></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">A free-form textual description of the content of the item. (The string appended to description_ in the property name should reflect the format of the text)<br>
+<td class="tableblock halign-left valign-top"><p class="tableblock">A free-form textual description of the content of the item. The string appended
+to description_ in the property name should reflect the format of the text, for
+example <code>description_text</code> or <code>description_html</code>.<br>
 Multiple description_* properties are allowed.</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">string</p></td>
 </tr>
