--- a/documentation/index.html
+++ b/documentation/index.html
@@ -433,8 +433,8 @@ body.book.toc2.toc-left #header #toc.toc2 ul.sectlevel2 li a {font-weight: norma
 <div class="details">
 <span id="author" class="author">IPTC News in JSON Working Group</span><br>
 <span id="email" class="email"><a href="mailto:office@iptc.org">office@iptc.org</a></span><br>
-<span id="revnumber">covers version 1.1</span>
-<br><span id="revremark">Revised 2019-09-09</span>
+<span id="revnumber">covers version 1.2</span>
+<br><span id="revremark">Revised 2019-10-21</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">ninjs User Guide</div>
@@ -513,6 +513,9 @@ ninjs to help you <a href="#_how_to_validate_objects">validate your ninjs
 implementation</a>.</p>
 </div>
 <div class="paragraph">
+<p>The latest version of the standard is 1.2.</p>
+</div>
+<div class="paragraph">
 <p><a href="https://iptc.org/std/ninjs/ninjs-schema_1.0.json">Version 1.0 of the ninjs
 schema</a> was approved by the IPTC Standards Committee on 23 October 2013.</p>
 </div>
@@ -520,6 +523,10 @@ schema</a> was approved by the IPTC Standards Committee on 23 October 2013.</p>
 <p><a href="https://iptc.org/std/ninjs/ninjs-schema_1.1.json">Version 1.1 of the ninjs
 schema</a> was made available in March 2014 and an error was corrected in September
 2017.</p>
+</div>
+<div class="paragraph">
+<p><a href="https://iptc.org/std/ninjs/ninjs-schema_1.2.json">Version 1.2 of the ninjs
+schema</a> was made available in October 2019.</p>
 </div>
 <div class="paragraph">
 <p>The IPTC welcomes your feedback on how to improve the standard via the
@@ -755,7 +762,8 @@ required, all others are optional.</p>
 <code>video</code><br>
 <code>picture</code><br>
 <code>graphic</code><br>
-<code>composite</code></p></td>
+<code>composite</code><br>
+<code>component</code></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">mimetype</p></td>
@@ -785,6 +793,11 @@ or <code>"text-photo"</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">string</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">firstcreated</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Indicates when the first version of the item was created.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">date-time</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">versioncreated</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">The date and time when this version of the news object was created.</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">date-time</p></td>
@@ -807,6 +820,22 @@ If absent, this object is not embargoed.</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">urgency</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">The editorial urgency of the content from 1 to 9. 1 represents the highest
 urgency, 9 the lowest</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">number</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">ednote</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">A note that is intended to be read by internal staff at the receiving
+organisation, but not published to the end-user.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">string</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">charcount</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The total character count in the article excluding figure captions.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">number</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">wordcount</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The total number of words in the article excluding figure captions.</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">number</p></td>
 </tr>
 <tr>
@@ -875,6 +904,11 @@ content.</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">headline</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">A brief and snappy introduction to the content, designed to catch the reader&#8217;s
 attention</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">string</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">slugline</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">A human-readable identifier for the item.</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">string</p></td>
 </tr>
 <tr>
@@ -1158,7 +1192,7 @@ This property is an array of objects with the following properties:</p>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">object</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p>Something material, excluding persons<br>
+<p>Something material, excluding persons.<br>
 This property is an array of objects with the following properties:</p>
 </div>
 <table class="tableblock frame-all grid-all stretch">
@@ -1199,14 +1233,58 @@ This property is an array of objects with the following properties:</p>
 </table></div></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">array</p></td>
 </tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">infosource</p></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p>A party (person or organisation) which originated, modified, enhanced, distributed, aggregated or supplied the content or provided some information used to create or enhance the content.<br>
+This property is an array of objects with the following properties:</p>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 33.3333%;">
+<col style="width: 33.3333%;">
+<col style="width: 33.3334%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">Property name</th>
+<th class="tableblock halign-left valign-top">Description</th>
+<th class="tableblock halign-left valign-top">Data type</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">name</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The name of the infosource</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">string</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">rel</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The relationship of the content of the news object to the infosource</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">string</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">scheme</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The identifier of a scheme/controlled vocabulary which includes a code for the infosource</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">URI</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">code</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The code for the infosource in a scheme/controlled vocabulary which is identified by the scheme property</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">string</p></td>
+</tr>
+</tbody>
+</table></div></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">array</p></td>
+</tr>
 </tbody>
 </table>
 </div>
 <div class="sect2">
 <h3 id="_renditions">3.5. Renditions</h3>
 <div class="paragraph">
-<p>The <code>renditions</code> property is a wrapper for different renditions of non-textual
-content of the news object, such as images, videos or PDF documents.</p>
+<p>The <code>renditions</code> property is a wrapper for different renditions of content of
+the news object, such as articles, images, videos or PDF documents.</p>
 </div>
 <div class="paragraph">
 <p>It contains a set of one or more keys, each with a name and an object as the
@@ -1259,6 +1337,16 @@ below properties.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">sizeinbytes</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">The size of the rendition resource in bytes</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">number</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">duration</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">The total time duration of the content in seconds</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">number</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">format</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Binary format name</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">string</p></td>
 </tr>
 </tbody>
 </table>
