--- a/generator/index.html
+++ b/generator/index.html
@@ -610,23 +610,27 @@ function sendEML (objForm){
                  <TD> 
                   <SELECT NAME="genre" SIZE="1" width="3"> 
                     <OPTION VALUE="Actuality"> Actuality </OPTION> 
+                      <OPTION VALUE="Advertiser_Supplied"> Advertiser Supplied </OPTION> 
                     <OPTION VALUE="Advice"> Advice </OPTION> 
                     <OPTION VALUE="Advisory"> Advisory </OPTION> 
-                    <OPTION VALUE="Almanac"> Almanac </OPTION> 
+                    <OPTION VALUE="Almanac"> On This Day </OPTION> 
                     <OPTION VALUE="Analysis"> Analysis </OPTION> 
                     <OPTION VALUE="Archive_material"> Archive material </OPTION> 
                     <OPTION VALUE="Background"> Background </OPTION> 
-                    <OPTION VALUE="Biography"> Biography </OPTION> 
+                      <OPTION VALUE="Behind_the_Story"> Behind the Story </OPTION>
+                      <OPTION VALUE="Biography"> Biography </OPTION> 
                     <OPTION VALUE="Birth_Announcement"> Birth Announcement </OPTION> 
-                    <OPTION VALUE="Current"> Current </OPTION> 
+                    <OPTION VALUE="Current"> Current Events </OPTION> 
                     <OPTION VALUE="Curtain_Raiser"> Curtain Raiser </OPTION> 
                     <OPTION VALUE="Daybook"> Daybook </OPTION> 
-                    <OPTION VALUE="Exclusive"> Exclusive </OPTION> 
+                    <OPTION VALUE="Exclusive"> Exclusive </OPTION>
+                      <OPTION VALUE="Fact_Check"> Fact Check </OPTION>
                     <OPTION VALUE="Feature"> Feature </OPTION> 
                     <OPTION VALUE="Fixture"> Fixture </OPTION> 
                     <OPTION VALUE="Forecast"> Forecast </OPTION> 
                     <OPTION VALUE="From_the_Scene"> From the Scene </OPTION> 
-                    <OPTION VALUE="History">  </OPTION> 
+                      <OPTION VALUE="Help_us_to_Report"> Help us to Report </OPTION>
+                    <OPTION VALUE="History"> History </OPTION> 
                     <OPTION VALUE="Horoscope"> Horoscope </OPTION> 
                     <OPTION VALUE="Interview"> Interview </OPTION> 
                     <OPTION VALUE="Listing_of_facts"> Listing of facts </OPTION> 
@@ -645,10 +649,13 @@ function sendEML (objForm){
                     <OPTION VALUE="Results_Listings_and_Statistics"> Results Listings and Statistics </OPTION> 
                     <OPTION VALUE="Retrospective"> Retrospective </OPTION> 
                     <OPTION VALUE="Review"> Review </OPTION> 
+                      <OPTION VALUE="Satire"> Satire </OPTION>
                     <OPTION VALUE="Scener"> Scener </OPTION> 
                     <OPTION VALUE="Side_bar_and_supporting_information"> Side bar and supporting information </OPTION> 
                     <OPTION VALUE="Special_Report"> Special Report </OPTION> 
+                      <OPTION VALUE="Sponsored"> Sponsored </OPTION>
                     <OPTION VALUE="Summary"> Summary </OPTION> 
+                      <OPTION VALUE="Summary"> Summary </OPTION>
                     <OPTION VALUE="Synopsis"> Synopsis </OPTION> 
                     <OPTION VALUE="Text_only"> Text only </OPTION> 
                     <OPTION VALUE="Transcript_and_Verbatim"> Transcript and Verbatim </OPTION> 
