Erratum release for 2.0 geojson handling (#128)
* Fix errors in schema and related examples handling external geojson schemas

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -2617,7 +2617,7 @@ The resulting object is not yet a valid ninjs object, however it will be valid J
 <div class="sect2">
 <h3 id="_ninjs_2_0">7.5. ninjs 2.0</h3>
 <div class="paragraph">
-<p><a href="https://iptc.org/std/ninjs/ninjs-schema_2.0.json">Version 2.0 of the ninjs schema</a> was approved by the IPTC Standards Committee and made available in XXXXXX.</p>
+<p><a href="https://iptc.org/std/ninjs/ninjs-schema_2.0.json">Version 2.0 of the ninjs schema</a> was approved by the IPTC Standards Committee and made available in October 2021.</p>
 </div>
 <div class="paragraph">
 <p>Version 2.0 made several changes, some of them breaking backwards compatibility:</p>
@@ -2688,6 +2688,9 @@ The resulting object is not yet a valid ninjs object, however it will be valid J
 <p>Added a new "rightsinfo" property with "linkedrights" or "embeddedrights" as child properties</p>
 </li>
 </ul>
+</div>
+<div class="paragraph">
+<p>An errata release of 2.0 in May 2022 fixed a problem with the GeoJSON property in the <code>places</code> object.</p>
 </div>
 </div>
 </div>
