Added a line to the intro about the erratum release.

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -435,7 +435,7 @@ body.book.toc2.toc-left #header #toc.toc2 ul.sectlevel2 li a {font-weight: norma
 <span id="author" class="author">IPTC News in JSON Working Group</span><br>
 <span id="email" class="email"><a href="mailto:office@iptc.org">office@iptc.org</a></span><br>
 <span id="revnumber">covers version 2.0</span>
-<br><span id="revremark">Revised 2021-09-06</span>
+<br><span id="revremark">Revised 2022-05-22</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">ninjs User Guide</div>
@@ -526,7 +526,9 @@ ninjs to help you <a href="#_how_to_validate_objects">validate your ninjs implem
 <div class="paragraph">
 <p>The latest version of the standard is 2.0:
 <a href="https://iptc.org/std/ninjs/ninjs-schema_2.0.json">Version 2.0 of the ninjs
-schema</a> was made available in October 2021.</p>
+schema</a> was made available in October 2021. An erratum release of version 2.0 was
+published in May 2022 to fix a problem with the way GeoJSON was included in the
+places object.</p>
 </div>
 <div class="paragraph">
 <p>The IPTC welcomes your feedback on how to improve the standard via the
